@@ -49,9 +49,6 @@ class GoodNewsMailing {
     /** @var int $bulksize The maximum value of mails to send by one task */
     public $bulksize = 30;
     
-    /** @var string $lockDir The path to the goodnews/locks/ directory in MODX cache folder */
-    public $lockDir;
-
     /** @var boolean $testMailing Is this a test mailing? */
     public $testMailing = false;
 
@@ -67,18 +64,22 @@ class GoodNewsMailing {
         $this->modx      = &$modx;
         $this->debug     = $this->modx->getOption('goodnews.debug', null, false) ? true : false;
         $this->bulksize  = $this->modx->getOption('goodnews.mailing_bulk_size', null, 30);
-        $this->_createLockFileDir();
         
         $corePath = $this->modx->getOption('goodnews.core_path', null, $this->modx->getOption('core_path').'components/goodnews/');
 
         if (!$this->modx->loadClass('GoodNewsProcessHandler', $corePath.'model/goodnews/', true, true)) {
-            $this->modx->log(modX::LOG_LEVEL_ERROR,'[GoodNews] Could not load GoodNewsProcessHandler class.');
+            $this->modx->log(modX::LOG_LEVEL_ERROR,'[GoodNews] Could not load GoodNewsProcessHandler class. Processing aborted.');
             exit();
         }
         $this->goodnewsprocesshandler = new GoodNewsProcessHandler($this->modx);
+        
+        if (!$this->goodnewsprocesshandler->createLockFileDir()) {
+            $this->modx->log(modX::LOG_LEVEL_ERROR,'[GoodNews] Lockfile directory missing! Processing aborted.');
+            exit();
+        }
 
         if (!$this->modx->loadClass('GoodNewsRecipientHandler', $corePath.'model/goodnews/', true, true)) {
-            $this->modx->log(modX::LOG_LEVEL_ERROR,'[GoodNews] Could not load GoodNewsRecipientHandler class.');
+            $this->modx->log(modX::LOG_LEVEL_ERROR,'[GoodNews] Could not load GoodNewsRecipientHandler class. Processing aborted.');
             exit();
         }
         $this->goodnewsrecipienthandler = new GoodNewsRecipientHandler($this->modx);
@@ -284,7 +285,7 @@ class GoodNewsMailing {
             $tstart = $mtime;
         }
 
-        $this->_lock();
+        $this->goodnewsprocesshandler->lock($this->mailingid);
 
         // Find next unsent recipient
         $recipientId = $this->goodnewsrecipienthandler->getRecipientUnsent($this->mailingid);
@@ -292,13 +293,13 @@ class GoodNewsMailing {
         // No more recipients (or list is empty which shouldn't happen here)
         if (!$recipientId) {
             if ($this->debug) { $this->modx->log(modX::LOG_LEVEL_INFO, '[GoodNews] [pid: '.getmypid().'] GoodNewsMailing::getNextRecipient - No unsent recipients found.'); }
-            $this->_unlock();
+            $this->goodnewsprocesshandler->lock($this->mailingid);
             return false;
         }
         // Habemus recipient!
         if ($this->debug) { $this->modx->log(modX::LOG_LEVEL_INFO, '[GoodNews] [pid: '.getmypid().'] GoodNewsMailing::getNextRecipient - Unsent recipient [id: '.$recipientId.'] found.'); }
         
-        $this->_unlock();
+        $this->goodnewsprocesshandler->lock($this->mailingid);
         
         if ($this->debug) {
             $mtime = microtime();
@@ -329,11 +330,11 @@ class GoodNewsMailing {
             $tstart = $mtime;
         }
         
-        $this->_lock();
+        $this->goodnewsprocesshandler->lock($this->mailingid);
 
         if (!$this->goodnewsrecipienthandler->cleanupRecipient($recipientId, $this->mailingid, $status)) {
             if ($this->debug) { $this->modx->log(modX::LOG_LEVEL_INFO, '[GoodNews] [pid: '.getmypid().'] GoodNewsMailing::updateRecipientStatus - Status for recipient [id: '.$recipientId.'] could not be updated to: '.$status); }
-            $this->_unlock();
+            $this->goodnewsprocesshandler->lock($this->mailingid);
             return false;
         }
 
@@ -352,7 +353,7 @@ class GoodNewsMailing {
         $meta->save();
         unset($meta);
         
-        $this->_unlock();
+        $this->goodnewsprocesshandler->lock($this->mailingid);
         
         if ($this->debug) {
             $mtime = microtime();
@@ -469,7 +470,10 @@ class GoodNewsMailing {
         $this->mailing   = $this->_getMailingObject();
         if (!$this->mailing) { return false; }
 
-        $this->_createLockFile();
+        if (!$this->goodnewsprocesshandler->createLockFile($this->mailingid)) {
+            $this->modx->log(modX::LOG_LEVEL_ERROR,'[GoodNews] Lockfile missing! Processing aborted.');
+            exit();
+        }
         
         $mail = $this->_getMailProperties();
         
@@ -488,9 +492,10 @@ class GoodNewsMailing {
                         if ($this->debug) { $this->modx->log(modX::LOG_LEVEL_INFO, '[GoodNews] [pid: '.getmypid().'] GoodNewsMailing::processMailing - Sending for recipient [id: '.$timeoutRecipientId.'] timed out.'); }
                     }
                 } else {
-                    // Stop this process!
+                    // Stop this process and remove temp lockfile!
                     $this->goodnewsprocesshandler->setPid(getmypid());
                     $this->goodnewsprocesshandler->deleteProcessStatus();
+                    $this->goodnewsprocesshandler->removeTempLockFile($this->mailingid);
                     
                     // Also we set the mailing to finished (= IPCstatus "stopped")
                     $this->setIPCstop($this->mailingid, true);
@@ -759,128 +764,6 @@ class GoodNewsMailing {
         } else {
             return false;
         }
-    }
-
-
-    /**
-     * Creates the directory for the temporary lock files.
-     * 
-     * @todo: move all lockfile related methods to a separate lockfilehandler class!
-     *
-     * @access private
-     * @return boolean (true -> if directory already exists or is created successfully)
-     */
-    private function _createLockFileDir() {
-        $this->lockDir = $this->modx->getOption('core_path', null, MODX_CORE_PATH).'cache/goodnews/locks/';
-        $dir = false;
-
-        if (is_dir($this->lockDir)) {
-            $dir = true;
-        } else {
-            $dir = mkdir($this->lockDir, 0777, true);
-            if ($dir) {
-                chmod($this->lockDir, 0777);
-                if ($this->debug) { $this->modx->log(modX::LOG_LEVEL_INFO, '[GoodNews] [pid: '.getmypid().'] GoodNewsMailing::_createLockFileDir - lockfile directory created.'); }
-            } else {
-                if ($this->debug) { $this->modx->log(modX::LOG_LEVEL_ERROR, '[GoodNews] [pid: '.getmypid().'] GoodNewsMailing::_createLockFileDir - could not create lockfile directory (file operation failed).'); }
-            }
-        }
-        return $dir;
-    }
-
-    /**
-     * Creates a temporary lock file for a specific mailing.
-     * 
-     * @todo: move all lockfile related methods to a separate lockfilehandler class!
-     *
-     * @access private
-     * @return boolean
-     */
-    private function _createLockFile() {
-        $tempfile = $this->lockDir.$this->mailingid.'.temp';
-        $lockfilepattern = $this->lockDir.$this->mailingid.'.*';
-        $file = false;
-        
-        $ary = glob($lockfilepattern);
-        if (empty($ary)) {
-            $file = file_put_contents($tempfile, $this->mailingid, LOCK_EX);
-            @chmod($tempfile, 0777);
-            if ($file) {
-                if ($this->debug) { $this->modx->log(modX::LOG_LEVEL_INFO, '[GoodNews] [pid: '.getmypid().'] GoodNewsMailing::_createLockFile - Mailing meta [id: '.$this->mailingid.'] - lockfile created.'); }
-            } else {
-                if ($this->debug) { $this->modx->log(modX::LOG_LEVEL_ERROR, '[GoodNews] [pid: '.getmypid().'] GoodNewsMailing::_createLockFile - Mailing meta [id: '.$this->mailingid.'] - could not create lockfile (file operation failed).'); }
-            }
-        } else {
-            if ($this->debug) { $this->modx->log(modX::LOG_LEVEL_INFO, '[GoodNews] [pid: '.getmypid().'] GoodNewsMailing::_createLockFile - Mailing meta [id: '.$this->mailingid.'] - lockfile already exists.'); }
-        }
-        return $file;
-    }
-
-    /**
-     * Removes a temporary lock file.
-     * 
-     * @todo: move all lockfile related methods to a separate lockfilehandler class!
-     *
-     * @access private
-     * @return void
-     */
-    private function _removeLockFile() {
-        $tempfile = $this->lockDir.$this->mailingid.'.temp';
-        @unlink($tempfile);
-    }
-
-    /**
-     * Set lock on db entry.
-     *
-     * @todo: move all lockfile related methods to a separate lockfilehandler class!
-     *
-     * @access private
-     * @return boolean
-     */
-    private function _lock() {
-        $tempfile = $this->lockDir.$this->mailingid.'.temp';
-        $lockfile = $this->lockDir.$this->mailingid.'.'.getmypid();
-        
-        while (!file_exists($lockfile)) {
-            while (!file_exists($tempfile)) {
-                if ($this->debug) { $this->modx->log(modX::LOG_LEVEL_INFO, '[GoodNews] [pid: '.getmypid().'] GoodNewsMailing::lock - waiting (mailing currently locked).'); }
-                usleep(rand(20000, 100000)); // 20 to 100 millisec
-            }
-            // Atomic method to use the file for locking purposes (@ is required here!)
-            $lock = @rename($tempfile, $lockfile); 
-            if ($lock) {
-                if ($this->debug) { $this->modx->log(modX::LOG_LEVEL_INFO, '[GoodNews] [pid: '.getmypid().'] GoodNewsMailing::lock - Mailing meta [id: '.$this->mailingid.'] - locked.'); }
-            } else {
-                if ($this->debug) { $this->modx->log(modX::LOG_LEVEL_ERROR, '[GoodNews] [pid: '.getmypid().'] GoodNewsMailing::lock - Mailing meta [id: '.$this->mailingid.'] - could not be locked (file operation failed).'); }
-            }
-            // Catch race conditions! 
-            if (file_exists($lockfile)) {
-                return $lock;
-            } else {
-                if ($this->debug) { $this->modx->log(modX::LOG_LEVEL_ERROR, '[GoodNews] [pid: '.getmypid().'] GoodNewsMailing::lock - Mailing meta [id: '.$this->mailingid.'] - race condition!'); }
-            }
-        }
-    }
-
-    /**
-     * Remove lock from db entry.
-     *
-     * @todo: move all lockfile related methods to a separate lockfilehandler class!
-     *
-     * @access private
-     * @return boolean
-     */
-    private function _unlock() {
-        $tempfile = $this->lockDir.$this->mailingid.'.temp';
-        $lockfile = $this->lockDir.$this->mailingid.'.'.getmypid();
-        // Atomic method to use the file for locking purposes
-        $unlock = @rename($lockfile, $tempfile); 
-        if ($unlock) {
-            if ($this->debug) { $this->modx->log(modX::LOG_LEVEL_INFO, '[GoodNews] [pid: '.getmypid().'] GoodNewsMailing::unlock - Mailing meta [id: '.$this->mailingid.'] - unlocked.'); }
-        } else {
-            $this->modx->log(modX::LOG_LEVEL_INFO, '[GoodNews] [pid: '.getmypid().'] GoodNewsMailing::unlock - Mailing meta [id: '.$this->mailingid.'] - could not be unlocked (file operation failed).');
-        }
-        return $unlock;
     }
 
     /**
